--- a/index.html
+++ b/index.html
@@ -3,72 +3,165 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Robin Ace Tapang | Web Portfolio</title>
-  <meta name="description" content="Portfolio of Robin Ace Tapang, a third-year Computer Technology undergraduate." />
+  <title>Robin Ace Tapang | Professional Portfolio</title>
+  <meta name="description" content="Professional portfolio of Robin Ace Tapang, a third-year Computer Technology undergraduate." />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+
     body {
-      font-family: 'Inter', sans-serif;
-      background: #0f172a;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(180deg, #020617, #0f172a);
       color: #e5e7eb;
-      line-height: 1.6;
+      line-height: 1.7;
     }
-    a { color: #38bdf8; text-decoration: none; }
+
+    a { text-decoration: none; }
+
     header {
-      padding: 4rem 1.5rem;
+      padding: 5rem 1.5rem 4rem;
       text-align: center;
-      background: linear-gradient(135deg, #020617, #020617);
     }
-    header h1 { font-size: 2.5rem; font-weight: 700; }
-    header p { margin-top: 1rem; color: #94a3b8; }
+
+    header h1 {
+      font-size: 2.8rem;
+      font-weight: 700;
+    }
+
+    header p {
+      margin-top: 1rem;
+      font-size: 1.1rem;
+      color: #94a3b8;
+    }
+
     nav {
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      padding: 1rem;
-      background: #020617;
       position: sticky;
       top: 0;
+      background: rgba(2, 6, 23, 0.95);
+      backdrop-filter: blur(8px);
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
+      z-index: 100;
     }
+
+    nav a {
+      color: #cbd5f5;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #38bdf8;
+    }
+
     section {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 0 auto;
-      padding: 4rem 1.5rem;
+      padding: 4.5rem 1.5rem;
     }
+
     h2 {
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      border-bottom: 2px solid #1e293b;
-      padding-bottom: 0.5rem;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      border-left: 4px solid #38bdf8;
+      padding-left: 1rem;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-    }
-    .card {
-      background: #020617;
-      padding: 1.5rem;
-      border-radius: 12px;
-      border: 1px solid #1e293b;
-    }
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      background: #020617;
-      color: #64748b;
-    }
+
     .btn {
       display: inline-block;
-      margin-top: 1rem;
-      padding: 0.7rem 1.2rem;
-      border-radius: 8px;
-      background: #38bdf8;
+      padding: 0.8rem 1.6rem;
+      border-radius: 999px;
+      background: linear-gradient(135deg, #38bdf8, #60a5fa);
       color: #020617;
       font-weight: 600;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 12px 30px rgba(56, 189, 248, 0.35);
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 2rem;
+    }
+
+    .card {
+      background: rgba(2, 6, 23, 0.85);
+      padding: 2rem;
+      border-radius: 20px;
+      border: 1px solid #1e293b;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+    }
+
+    /* Cute anime-style dancing character */
+    .anime-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 3rem;
+    }
+
+    .anime {
+      width: 120px;
+      height: 180px;
+      position: relative;
+      animation: dance 1.2s infinite ease-in-out;
+    }
+
+    .head {
+      width: 60px;
+      height: 60px;
+      background: #fde68a;
+      border-radius: 50%;
+      margin: 0 auto;
+    }
+
+    .body {
+      width: 50px;
+      height: 70px;
+      background: #60a5fa;
+      border-radius: 12px;
+      margin: 0.5rem auto 0;
+    }
+
+    .leg {
+      width: 18px;
+      height: 50px;
+      background: #94a3b8;
+      position: absolute;
+      bottom: 0;
+      border-radius: 8px;
+    }
+
+    .leg.left { left: 30px; }
+    .leg.right { right: 30px; }
+
+    @keyframes dance {
+      0% { transform: rotate(0deg) translateY(0); }
+      25% { transform: rotate(3deg) translateY(-3px); }
+      50% { transform: rotate(0deg) translateY(0); }
+      75% { transform: rotate(-3deg) translateY(-3px); }
+      100% { transform: rotate(0deg) translateY(0); }
+    }
+
+    footer {
+      text-align: center;
+      padding: 3rem 1rem;
+      background: #020617;
+      color: #64748b;
     }
   </style>
 </head>
@@ -77,7 +170,20 @@
 <header>
   <h1>Robin Ace Tapang</h1>
   <p>Third-Year Computer Technology Undergraduate · Aspiring IT Professional</p>
-  <a class="btn" href="#projects">View My Work</a>
+  <div style="margin-top: 2rem;">
+    <a href="#projects" class="btn">View Projects</a>
+    &nbsp;
+    <a href="#contact" class="btn">Contact Me</a>
+  </div>
+
+  <div class="anime-container">
+    <div class="anime">
+      <div class="head"></div>
+      <div class="body"></div>
+      <div class="leg left"></div>
+      <div class="leg right"></div>
+    </div>
+  </div>
 </header>
 
 <nav>
@@ -91,7 +197,7 @@
 <section id="about">
   <h2>About Me</h2>
   <p>
-    I am Robin Ace Tapang, 22 years old, currently a third-year undergraduate taking up a Computer Technology course. I am focused on building strong foundations in software, hardware, and web technologies, with a growing interest in practical, real-world applications of IT.
+    I am Robin Ace Tapang, 22 years old, currently a third-year undergraduate pursuing a Computer Technology course. I am developing strong foundations in IT systems, web development, and computer hardware, with a clear goal of becoming a capable and reliable technology professional.
   </p>
 </section>
 
@@ -99,7 +205,7 @@
   <h2>Skills</h2>
   <div class="grid">
     <div class="card">HTML, CSS, JavaScript</div>
-    <div class="card">Basic Web Development</div>
+    <div class="card">Basic Front-End Development</div>
     <div class="card">Computer Hardware & Troubleshooting</div>
     <div class="card">Windows OS & System Maintenance</div>
   </div>
@@ -110,25 +216,25 @@
   <div class="grid">
     <div class="card">
       <h3>Personal Portfolio Website</h3>
-      <p>A responsive personal website showcasing my background, skills, and projects.</p>
+      <p>A professional and responsive web portfolio designed to showcase my skills and background.</p>
     </div>
     <div class="card">
-      <h3>Academic IT Projects</h3>
-      <p>Various coursework projects related to computer technology and system fundamentals.</p>
+      <h3>Academic Computer Technology Projects</h3>
+      <p>Hands-on coursework projects related to system fundamentals, basic programming, and IT concepts.</p>
     </div>
   </div>
 </section>
 
 <section id="resume">
   <h2>Resume</h2>
-  <p>You can download my full CV below.</p>
+  <p>You can download my complete curriculum vitae below.</p>
   <a class="btn" href="Robin-Ace-Tapang-CV.pdf" download>Download CV</a>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>If you would like to connect, feel free to reach out.</p>
-  <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+  <p>If you would like to connect or discuss opportunities, feel free to reach out.</p>
+  <p>Email: <a href="mailto:msalobenyaa@gmail.com">msalobenyaa@gmail.com</a></p>
 </section>
 
 <footer>
