--- a/index.html
+++ b/index.html
@@ -4,139 +4,143 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Robin Ace Tapang | Professional Portfolio</title>
-  <meta name="description" content="Professional portfolio of Robin Ace Tapang, a third-year Computer Technology undergraduate." />
+  <meta name="description" content="Professional portfolio of Robin Ace Tapang, a Bachelor of Industrial Technology Undergraduate majoring in Computer Technology." />
 
   <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- AOS (Animate on Scroll) -->
+  <!-- AOS for Scroll Animations -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    /* Global Reset */
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #0a0a0a;
-      color: #e5e7eb;
-      line-height: 1.7;
+      background-color: #0b0b0d;
+      color: #f8f8f8;
+      line-height: 1.8;
       scroll-behavior: smooth;
     }
     a { text-decoration: none; }
 
     /* Header */
     header {
-      padding: 5rem 1.5rem 4rem;
-      text-align: center;
       position: relative;
+      padding: 6rem 2rem 4rem;
+      text-align: center;
       overflow: hidden;
     }
     header h1 {
       font-size: 3rem;
       font-weight: 700;
-      color: #FFD700;
+      color: #ff69b4; /* Majestic Pink */
+      text-shadow: 1px 1px 5px rgba(255,105,180,0.6);
     }
     header p {
       margin-top: 1rem;
       font-size: 1.2rem;
-      color: #cbd5f5;
+      color: #d1d1d1;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     /* Buttons */
     .btn {
       display: inline-block;
-      padding: 0.8rem 1.6rem;
-      border-radius: 999px;
-      background: linear-gradient(135deg, #FFD700, #FFB800);
-      color: #0a0a0a;
+      margin-top: 1rem;
+      padding: 0.8rem 1.8rem;
+      border-radius: 50px;
       font-weight: 600;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      color: #0b0b0d;
+      background: linear-gradient(135deg, #ff69b4, #ff1493);
+      transition: all 0.4s ease;
+      box-shadow: 0 6px 15px rgba(255,20,147,0.3);
     }
     .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 12px 30px rgba(255, 215, 0, 0.35);
+      transform: translateY(-4px) scale(1.05);
+      box-shadow: 0 12px 30px rgba(255,20,147,0.6);
     }
 
     /* Navigation */
     nav {
       position: sticky;
-      top: 0;
-      background: rgba(10, 10, 10, 0.95);
-      backdrop-filter: blur(10px);
+      top:0;
+      z-index: 100;
       display: flex;
       justify-content: center;
       gap: 2rem;
       padding: 1rem;
-      z-index: 100;
+      background: rgba(11,11,13,0.95);
+      backdrop-filter: blur(8px);
     }
     nav a {
-      color: #e5e7eb;
+      color: #f8f8f8;
       font-weight: 500;
       transition: color 0.3s ease;
     }
-    nav a:hover {
-      color: #FFD700;
-    }
+    nav a:hover { color: #ff69b4; }
 
     /* Sections */
     section {
       max-width: 1000px;
       margin: 0 auto;
       padding: 4.5rem 1.5rem;
+      position: relative;
     }
     h2 {
       font-size: 2rem;
       margin-bottom: 2rem;
-      border-left: 4px solid #FFD700;
+      border-left: 4px solid #ff69b4;
       padding-left: 1rem;
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
     }
     .card {
-      background: rgba(15, 15, 30, 0.85);
+      background: rgba(15,15,30,0.85);
       padding: 2rem;
       border-radius: 20px;
-      border: 1px solid #1e293b;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 1px solid #2d2d40;
+      transition: all 0.4s ease;
     }
     .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 20px 40px rgba(255, 215, 0, 0.25);
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 20px 40px rgba(255,105,180,0.3);
     }
 
-    /* Nezuko Lottie Animation Container */
+    /* Animated Nezuko Container */
     .nezuko-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 3rem;
-      position: relative;
+      display:flex;
+      justify-content:center;
+      margin-top:3rem;
+      position:relative;
+      z-index:1;
     }
     #nezuko-animation {
-      width: 220px;
-      height: 300px;
+      width: 250px;
+      height: 320px;
     }
 
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 3rem 1rem;
-      background: #0a0a0a;
-      color: #64748b;
-    }
-
-    /* Demon Slayer Particle Effects */
+    /* Particle Effects (Fire, Water, Air) */
     #particles-js {
       position: absolute;
       width: 100%;
       height: 100%;
-      top: 0;
-      left: 0;
+      top:0;
+      left:0;
       pointer-events: none;
-      z-index: 0;
+      z-index:0;
+    }
+
+    footer {
+      text-align:center;
+      padding:3rem 1rem;
+      background:#0b0b0d;
+      color:#888;
     }
   </style>
 </head>
@@ -144,13 +148,15 @@
 
 <header>
   <h1>Robin Ace Tapang</h1>
-  <p>Third-Year Computer Technology Undergraduate · Aspiring IT Professional</p>
-  <div style="margin-top: 2rem;">
+  <p>
+    Motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology.  
+    I possess comprehensive knowledge in both software and hardware, including computer maintenance, troubleshooting, programming basics, database management with SQL, Microsoft & Google applications, IDEs for C++, JavaScript, and Python, as well as fundamental networking concepts.  
+    With hands-on skills in system operations and software tools, I am committed to developing as a competent and reliable IT professional.
+  </p>
+  <div>
     <a href="#projects" class="btn">View Projects</a>
-    &nbsp;
     <a href="#contact" class="btn">Contact Me</a>
   </div>
-
   <div class="nezuko-container">
     <div id="nezuko-animation"></div>
     <div id="particles-js"></div>
@@ -161,6 +167,8 @@
   <a href="#about">About</a>
   <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
+  <a href="#achievements">Achievements</a>
+  <a href="#certificates">Certificates</a>
   <a href="#resume">Resume</a>
   <a href="#contact">Contact</a>
 </nav>
@@ -168,7 +176,9 @@
 <section id="about" data-aos="fade-up">
   <h2>About Me</h2>
   <p>
-    I am Robin Ace Tapang, 22 years old, currently a third-year undergraduate pursuing a Computer Technology course. I am developing strong foundations in IT systems, web development, and computer hardware, with a clear goal of becoming a capable and reliable technology professional.
+    I am a highly motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology.  
+    As a third-year student, I have developed strong knowledge in both hardware and software systems, including basic programming, database management using SQL, and proficiency with Microsoft Office, Google Workspace, and programming IDEs for C++, JavaScript, and Python.  
+    I am also skilled in computer maintenance, troubleshooting, and networking concepts. My passion lies in blending practical IT skills with innovative solutions, preparing me to become a reliable and competent IT professional in both academic and real-world environments.
   </p>
 </section>
 
@@ -176,9 +186,11 @@
   <h2>Skills</h2>
   <div class="grid">
     <div class="card">HTML, CSS, JavaScript</div>
-    <div class="card">Basic Front-End Development</div>
-    <div class="card">Computer Hardware & Troubleshooting</div>
-    <div class="card">Windows OS & System Maintenance</div>
+    <div class="card">C++ and Python Programming</div>
+    <div class="card">Database Management (SQL)</div>
+    <div class="card">Microsoft & Google Apps Proficiency</div>
+    <div class="card">Basic Computer Hardware & Troubleshooting</div>
+    <div class="card">Computer Networking Fundamentals</div>
   </div>
 </section>
 
@@ -187,11 +199,33 @@
   <div class="grid">
     <div class="card">
       <h3>Personal Portfolio Website</h3>
-      <p>A professional and responsive web portfolio designed to showcase my skills and background.</p>
+      <p>A professional web portfolio showcasing my skills, achievements, and projects in a responsive and visually appealing design.</p>
     </div>
     <div class="card">
-      <h3>Academic Computer Technology Projects</h3>
-      <p>Hands-on coursework projects related to system fundamentals, basic programming, and IT concepts.</p>
+      <h3>G.A.B Guardian AuroBox QR Code Attendance System Thesis Project 2024</h3>
+      <p>A thesis project developing a QR code-based attendance system for efficient student monitoring and data management.</p>
+    </div>
+  </div>
+</section>
+
+<section id="achievements" data-aos="fade-up">
+  <h2>Achievements</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>G.A.B Guardian AuroBox QR Code Attendance System Thesis Project 2024</h3>
+      <p>Developed an innovative attendance system using QR code technology for reliable student tracking and record management.</p>
+    </div>
+  </div>
+</section>
+
+<section id="certificates" data-aos="fade-up">
+  <h2>Certificates</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Comptechniques: Augment Your Tech Knowledge in the Vital Environment of Technology 2023</h3>
+    </div>
+    <div class="card">
+      <h3>TechXperts Workshops Sessions - Bulacan Tech Expo 2023</h3>
     </div>
   </div>
 </section>
@@ -218,10 +252,10 @@
 <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 
 <script>
-  // Initialize AOS
+  // AOS Initialization
   AOS.init({ duration: 1200 });
 
-  // Load Nezuko Lottie Animation
+  // Nezuko Lottie Animation
   lottie.loadAnimation({
     container: document.getElementById('nezuko-animation'),
     renderer: 'svg',
@@ -230,16 +264,15 @@
     path: 'nezuko_animation.json' // Replace with your Nezuko Lottie JSON file
   });
 
-  // Initialize Demon Slayer-style particles
+  // Demon Slayer-style Particles (fire, water, air effects)
   tsParticles.load("particles-js", {
     particles: {
-      number: { value: 60 },
-      color: { value: ["#E63946","#F77F00","#FFD700"] },
+      number: { value: 80 },
+      color: { value: ["#FF4500","#1E90FF","#ADFF2F","#DA70D6"] },
       shape: { type: "circle" },
-      opacity: { value: 0.8 },
-      size: { value: { min: 2, max: 5 } },
-      move: { enable: true, speed: 3, direction: "none", out_mode: "out" },
-      line_linked: { enable: false }
+      opacity: { value: 0.7 },
+      size: { value: { min: 2, max: 6 } },
+      move: { enable: true, speed: 3, out_mode: "out" }
     },
     interactivity: {
       events: {
