--- a/index.html
+++ b/index.html
@@ -1,163 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Robin Ace Tapang | Professional Portfolio</title>
-  <meta name="description" content="Professional portfolio of Robin Ace Tapang, a Bachelor of Industrial Technology Undergraduate majoring in Computer Technology." />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Robin Ace Tapang | Professional Portfolio</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- AOS for Scroll Animations -->
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+<!-- AOS -->
+<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <style>
-    /* Global Reset */
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #0b0b0d;
-      color: #f8f8f8;
-      line-height: 1.8;
-      scroll-behavior: smooth;
-    }
-    a { text-decoration: none; }
+<style>
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #0a0a0a;
+  color: #f5f5f5;
+  scroll-behavior: smooth;
+  margin: 0;
+  line-height: 1.7;
+}
 
-    /* Header */
-    header {
-      position: relative;
-      padding: 6rem 2rem 4rem;
-      text-align: center;
-      overflow: hidden;
-    }
-    header h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      color: #ff69b4; /* Majestic Pink */
-      text-shadow: 1px 1px 5px rgba(255,105,180,0.6);
-    }
-    header p {
-      margin-top: 1rem;
-      font-size: 1.2rem;
-      color: #d1d1d1;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
+header {
+  text-align: center;
+  padding: 5rem 1rem 4rem;
+  position: relative;
+  overflow: hidden;
+}
 
-    /* Buttons */
-    .btn {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.8rem 1.8rem;
-      border-radius: 50px;
-      font-weight: 600;
-      color: #0b0b0d;
-      background: linear-gradient(135deg, #ff69b4, #ff1493);
-      transition: all 0.4s ease;
-      box-shadow: 0 6px 15px rgba(255,20,147,0.3);
-    }
-    .btn:hover {
-      transform: translateY(-4px) scale(1.05);
-      box-shadow: 0 12px 30px rgba(255,20,147,0.6);
-    }
+header h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #ff66cc;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 
-    /* Navigation */
-    nav {
-      position: sticky;
-      top:0;
-      z-index: 100;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem;
-      background: rgba(11,11,13,0.95);
-      backdrop-filter: blur(8px);
-    }
-    nav a {
-      color: #f8f8f8;
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
-    nav a:hover { color: #ff69b4; }
+.verified-badge {
+  width: 24px;
+  height: 24px;
+  background: #00a2ff;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+}
+.verified-badge::after {
+  content: '✔';
+  color: #fff;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-    /* Sections */
-    section {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 4.5rem 1.5rem;
-      position: relative;
-    }
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 2rem;
-      border-left: 4px solid #ff69b4;
-      padding-left: 1rem;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-    }
-    .card {
-      background: rgba(15,15,30,0.85);
-      padding: 2rem;
-      border-radius: 20px;
-      border: 1px solid #2d2d40;
-      transition: all 0.4s ease;
-    }
-    .card:hover {
-      transform: translateY(-8px) scale(1.02);
-      box-shadow: 0 20px 40px rgba(255,105,180,0.3);
-    }
+header p {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  color: #e5c1ff;
+}
 
-    /* Animated Nezuko Container */
-    .nezuko-container {
-      display:flex;
-      justify-content:center;
-      margin-top:3rem;
-      position:relative;
-      z-index:1;
-    }
-    #nezuko-animation {
-      width: 250px;
-      height: 320px;
-    }
+.btn {
+  display: inline-block;
+  padding: 0.8rem 1.6rem;
+  border-radius: 999px;
+  background: linear-gradient(135deg, #ff66cc, #ff33aa);
+  color: #0a0a0a;
+  font-weight: 600;
+  margin: 0.5rem;
+  transition: all 0.3s ease;
+}
+.btn:hover {
+  transform: translateY(-3px) scale(1.05);
+  box-shadow: 0 12px 30px rgba(255,102,204,0.5);
+}
 
-    /* Particle Effects (Fire, Water, Air) */
-    #particles-js {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top:0;
-      left:0;
-      pointer-events: none;
-      z-index:0;
-    }
+nav {
+  position: sticky;
+  top: 0;
+  background: rgba(10,10,10,0.95);
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 1rem;
+  z-index: 100;
+}
+nav a {
+  color: #f5f5f5;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+nav a:hover {
+  color: #ff66cc;
+}
 
-    footer {
-      text-align:center;
-      padding:3rem 1rem;
-      background:#0b0b0d;
-      color:#888;
-    }
-  </style>
+section {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 4.5rem 1.5rem;
+  position: relative;
+}
+h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  border-left: 4px solid #ff66cc;
+  padding-left: 1rem;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 2rem;
+}
+.card {
+  background: rgba(20, 10, 30, 0.85);
+  padding: 2rem;
+  border-radius: 20px;
+  border: 1px solid #330033;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 20px 40px rgba(255,102,204,0.3);
+}
+
+/* Anime + Particle container */
+.anime-container {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0; left: 0;
+  z-index: 0;
+  pointer-events: none;
+}
+#nezuko-animation {
+  width: 220px;
+  height: 320px;
+  z-index: 2;
+}
+
+footer {
+  text-align: center;
+  padding: 3rem 1rem;
+  background: #0a0a0a;
+  color: #64748b;
+}
+</style>
 </head>
 <body>
 
 <header>
-  <h1>Robin Ace Tapang</h1>
-  <p>
-    Motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology.  
-    I possess comprehensive knowledge in both software and hardware, including computer maintenance, troubleshooting, programming basics, database management with SQL, Microsoft & Google applications, IDEs for C++, JavaScript, and Python, as well as fundamental networking concepts.  
-    With hands-on skills in system operations and software tools, I am committed to developing as a competent and reliable IT professional.
-  </p>
+  <h1>Robin Ace Tapang <span class="verified-badge"></span></h1>
+  <p>Motivated Bachelor of Industrial Technology Undergraduate Majoring in Computer Technology</p>
   <div>
     <a href="#projects" class="btn">View Projects</a>
     <a href="#contact" class="btn">Contact Me</a>
   </div>
-  <div class="nezuko-container">
+
+  <!-- Anime + Particle Effects -->
+  <div class="anime-container">
     <div id="nezuko-animation"></div>
     <div id="particles-js"></div>
   </div>
@@ -174,76 +185,72 @@
 </nav>
 
 <section id="about" data-aos="fade-up">
-  <h2>About Me</h2>
-  <p>
-    I am a highly motivated Bachelor of Industrial Technology undergraduate majoring in Computer Technology.  
-    As a third-year student, I have developed strong knowledge in both hardware and software systems, including basic programming, database management using SQL, and proficiency with Microsoft Office, Google Workspace, and programming IDEs for C++, JavaScript, and Python.  
-    I am also skilled in computer maintenance, troubleshooting, and networking concepts. My passion lies in blending practical IT skills with innovative solutions, preparing me to become a reliable and competent IT professional in both academic and real-world environments.
-  </p>
+<h2>About Me</h2>
+<p>
+I am Robin Ace Tapang, a motivated third-year Bachelor of Industrial Technology undergraduate majoring in Computer Technology. I possess both software and hardware skills, including programming in C++, Python, and JavaScript, knowledge of databases (SQL), proficiency with Microsoft and Google applications, IDEs for software development, system troubleshooting, computer networking, and hardware maintenance. I am passionate about creating functional IT solutions while continually improving my technical and practical knowledge in software, hardware, and networking.
+</p>
 </section>
 
 <section id="skills" data-aos="fade-up">
-  <h2>Skills</h2>
-  <div class="grid">
-    <div class="card">HTML, CSS, JavaScript</div>
-    <div class="card">C++ and Python Programming</div>
-    <div class="card">Database Management (SQL)</div>
-    <div class="card">Microsoft & Google Apps Proficiency</div>
-    <div class="card">Basic Computer Hardware & Troubleshooting</div>
-    <div class="card">Computer Networking Fundamentals</div>
-  </div>
+<h2>Skills</h2>
+<div class="grid">
+<div class="card">HTML, CSS, JavaScript, C++, Python</div>
+<div class="card">Database Management (SQL)</div>
+<div class="card">Software Platforms & IDEs</div>
+<div class="card">Computer Hardware & Troubleshooting</div>
+<div class="card">Networking & System Maintenance</div>
+<div class="card">Microsoft & Google Applications</div>
+</div>
 </section>
 
 <section id="projects" data-aos="fade-up">
-  <h2>Projects</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Personal Portfolio Website</h3>
-      <p>A professional web portfolio showcasing my skills, achievements, and projects in a responsive and visually appealing design.</p>
-    </div>
-    <div class="card">
-      <h3>G.A.B Guardian AuroBox QR Code Attendance System Thesis Project 2024</h3>
-      <p>A thesis project developing a QR code-based attendance system for efficient student monitoring and data management.</p>
-    </div>
-  </div>
+<h2>Projects</h2>
+<div class="grid">
+<div class="card">
+<h3>Personal Portfolio Website</h3>
+<p>A professional and responsive web portfolio designed to showcase my skills and background.</p>
+</div>
+<div class="card">
+<h3>Academic Computer Technology Projects</h3>
+<p>Hands-on coursework projects related to system fundamentals, basic programming, and IT concepts.</p>
+</div>
+</div>
 </section>
 
 <section id="achievements" data-aos="fade-up">
-  <h2>Achievements</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>G.A.B Guardian AuroBox QR Code Attendance System Thesis Project 2024</h3>
-      <p>Developed an innovative attendance system using QR code technology for reliable student tracking and record management.</p>
-    </div>
-  </div>
+<h2>Achievements</h2>
+<div class="grid">
+<div class="card">
+<h3>G.A.B Guardian AuroBox QR Code Attendance System Thesis Project 2024</h3>
+</div>
+</div>
 </section>
 
 <section id="certificates" data-aos="fade-up">
-  <h2>Certificates</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Comptechniques: Augment Your Tech Knowledge in the Vital Environment of Technology 2023</h3>
-    </div>
-    <div class="card">
-      <h3>TechXperts Workshops Sessions - Bulacan Tech Expo 2023</h3>
-    </div>
-  </div>
+<h2>Certificates</h2>
+<div class="grid">
+<div class="card">
+<h3>Comptechniques: Augment Your Tech Knowledge in the Vital Environment of Technology 2023</h3>
+</div>
+<div class="card">
+<h3>TechXperts Workshop Sessions - Bulacan Tech Expo 2023</h3>
+</div>
+</div>
 </section>
 
 <section id="resume" data-aos="fade-up">
-  <h2>Resume</h2>
-  <p>You can download my complete curriculum vitae below.</p>
-  <a class="btn" href="Robin-Ace-Tapang-CV.pdf" download>Download CV</a>
+<h2>Resume</h2>
+<p>You can download my complete CV below.</p>
+<a class="btn" href="Robin-Ace-Tapang-CV.pdf" download>Download CV</a>
 </section>
 
 <section id="contact" data-aos="fade-up">
-  <h2>Contact</h2>
-  <p>If you would like to connect or discuss opportunities, feel free to reach out.</p>
-  <p>Email: <a href="mailto:msalobenyaa@gmail.com">msalobenyaa@gmail.com</a></p>
+<h2>Contact</h2>
+<p>Email: <a href="mailto:msalobenyaa@gmail.com">msalobenyaa@gmail.com</a></p>
 </section>
 
 <footer>
-  <p>© 2026 Robin Ace Tapang. All rights reserved.</p>
+<p>© 2026 Robin Ace Tapang. All rights reserved.</p>
 </footer>
 
 <!-- Scripts -->
@@ -252,39 +259,36 @@
 <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 
 <script>
-  // AOS Initialization
-  AOS.init({ duration: 1200 });
+AOS.init({ duration: 1200 });
 
-  // Nezuko Lottie Animation
-  lottie.loadAnimation({
-    container: document.getElementById('nezuko-animation'),
-    renderer: 'svg',
-    loop: true,
-    autoplay: true,
-    path: 'nezuko_animation.json' // Replace with your Nezuko Lottie JSON file
-  });
+// Lottie Nezuko animation (replace URL with your JSON or LottieFiles URL)
+lottie.loadAnimation({
+  container: document.getElementById('nezuko-animation'),
+  renderer: 'svg',
+  loop: true,
+  autoplay: true,
+  path: 'https://assets4.lottiefiles.com/packages/lf20_sY9qVx.json' // demo Nezuko animation from LottieFiles
+});
 
-  // Demon Slayer-style Particles (fire, water, air effects)
-  tsParticles.load("particles-js", {
-    particles: {
-      number: { value: 80 },
-      color: { value: ["#FF4500","#1E90FF","#ADFF2F","#DA70D6"] },
-      shape: { type: "circle" },
-      opacity: { value: 0.7 },
-      size: { value: { min: 2, max: 6 } },
-      move: { enable: true, speed: 3, out_mode: "out" }
+// tsParticles for Demon Slayer powers
+tsParticles.load("particles-js", {
+  particles: {
+    number: { value: 100 },
+    color: { value: ["#FF4500","#00BFFF","#32CD32","#FF69B4","#FFD700"] },
+    shape: { type: "circle" },
+    opacity: { value: 0.8 },
+    size: { value: { min: 2, max: 6 } },
+    move: { enable: true, speed: 3, direction: "none", out_mode: "out" },
+    line_linked: { enable: false }
+  },
+  interactivity: {
+    events: {
+      onhover: { enable: true, mode: "repulse" },
+      onclick: { enable: true, mode: "push" }
     },
-    interactivity: {
-      events: {
-        onhover: { enable: true, mode: "repulse" },
-        onclick: { enable: true, mode: "push" }
-      },
-      modes: {
-        repulse: { distance: 100 },
-        push: { particles_nb: 4 }
-      }
-    }
-  });
+    modes: { repulse: { distance: 120 }, push: { particles_nb: 6 } }
+  }
+});
 </script>
 </body>
 </html>
