--- a/index.html
+++ b/index.html
@@ -1,294 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Robin Ace Tapang | Professional Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Robin Ace Tapang | Professional Portfolio</title>
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-<!-- AOS -->
-<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <style>
+        :root {
+            --primary-pink: #ff66cc;
+            --meta-blue: #00a2ff;
+            --dark-bg: #0a0a0a;
+            --card-bg: rgba(20, 10, 30, 0.85);
+        }
 
-<style>
-body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #0a0a0a;
-  color: #f5f5f5;
-  scroll-behavior: smooth;
-  margin: 0;
-  line-height: 1.7;
-}
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: var(--dark-bg);
+            color: #f5f5f5;
+            margin: 0;
+            line-height: 1.7;
+            scroll-behavior: smooth;
+        }
 
-header {
-  text-align: center;
-  padding: 5rem 1rem 4rem;
-  position: relative;
-  overflow: hidden;
-}
+        header {
+            text-align: center;
+            padding: 6rem 1.5rem 4rem;
+            position: relative;
+        }
 
-header h1 {
-  font-size: 3rem;
-  font-weight: 700;
-  color: #ff66cc;
-  display: inline-flex;
-  align-items: center;
-  gap: 0.5rem;
-}
+        .profile-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 1rem;
+        }
 
-.verified-badge {
-  width: 24px;
-  height: 24px;
-  background: #00a2ff;
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-}
-.verified-badge::after {
-  content: '✔';
-  color: #fff;
-  font-size: 14px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+        .profile-photo {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid var(--primary-pink);
+            box-shadow: 0 0 15px rgba(255,102,204,.4);
+        }
 
-header p {
-  margin-top: 1rem;
-  font-size: 1.2rem;
-  color: #e5c1ff;
-}
+        header h1 {
+            font-size: 2.2rem;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin: 0;
+        }
 
-.btn {
-  display: inline-block;
-  padding: 0.8rem 1.6rem;
-  border-radius: 999px;
-  background: linear-gradient(135deg, #ff66cc, #ff33aa);
-  color: #0a0a0a;
-  font-weight: 600;
-  margin: 0.5rem;
-  transition: all 0.3s ease;
-}
-.btn:hover {
-  transform: translateY(-3px) scale(1.05);
-  box-shadow: 0 12px 30px rgba(255,102,204,0.5);
-}
+        .verified-badge {
+            width: 22px;
+            height: 22px;
+            background: var(--meta-blue);
+            border-radius: 50%;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .verified-badge::after {
+            content: "✔";
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+        }
 
-nav {
-  position: sticky;
-  top: 0;
-  background: rgba(10,10,10,0.95);
-  backdrop-filter: blur(10px);
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  padding: 1rem;
-  z-index: 100;
-}
-nav a {
-  color: #f5f5f5;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-nav a:hover {
-  color: #ff66cc;
-}
+        .anime-visual-area {
+            position: relative;
+            width: 100%;
+            height: 350px;
+            margin-top: 20px;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
-section {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 4.5rem 1.5rem;
-  position: relative;
-}
-h2 {
-  font-size: 2rem;
-  margin-bottom: 2rem;
-  border-left: 4px solid #ff66cc;
-  padding-left: 1rem;
-}
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 2rem;
-}
-.card {
-  background: rgba(20, 10, 30, 0.85);
-  padding: 2rem;
-  border-radius: 20px;
-  border: 1px solid #330033;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 20px 40px rgba(255,102,204,0.3);
-}
+        #particles-js {
+            position: absolute;
+            inset: 0;
+            z-index: 1;
+        }
 
-/* Anime + Particle container */
-.anime-container {
-  position: relative;
-  width: 100%;
-  height: 400px;
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0; left: 0;
-  z-index: 0;
-  pointer-events: none;
-}
-#nezuko-animation {
-  width: 220px;
-  height: 320px;
-  z-index: 2;
-}
+        #nezuko-animation {
+            z-index: 2;
+            font-size: 6rem;
+            animation: glow 2s infinite alternate;
+        }
 
-footer {
-  text-align: center;
-  padding: 3rem 1rem;
-  background: #0a0a0a;
-  color: #64748b;
-}
-</style>
+        @keyframes glow {
+            from { filter: drop-shadow(0 0 10px #ff66cc); }
+            to { filter: drop-shadow(0 0 30px #ff99dd); }
+        }
+
+        nav {
+            position: sticky;
+            top: 0;
+            background: rgba(10,10,10,.9);
+            backdrop-filter: blur(12px);
+            display: flex;
+            justify-content: center;
+            gap: 1.5rem;
+            padding: 1rem;
+            z-index: 100;
+            border-bottom: 1px solid #222;
+            flex-wrap: wrap;
+        }
+        nav a {
+            color: #ccc;
+            text-decoration: none;
+            font-size: .9rem;
+        }
+        nav a:hover { color: var(--primary-pink); }
+
+        section {
+            max-width: 900px;
+            margin: auto;
+            padding: 4rem 1.5rem;
+        }
+
+        h2 {
+            border-left: 4px solid var(--primary-pink);
+            padding-left: 1rem;
+            margin-bottom: 2rem;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+            gap: 1.5rem;
+        }
+
+        .card {
+            background: var(--card-bg);
+            padding: 1.5rem;
+            border-radius: 15px;
+            border: 1px solid #331a33;
+            transition: .3s;
+        }
+        .card:hover {
+            transform: translateY(-6px);
+            border-color: var(--primary-pink);
+        }
+
+        .btn {
+            display: inline-block;
+            padding: .7rem 1.5rem;
+            border-radius: 50px;
+            background: linear-gradient(135deg,#ff66cc,#ff33aa);
+            color: #000;
+            font-weight: 600;
+            text-decoration: none;
+            margin: 10px 5px;
+        }
+
+        #quote-container {
+            margin-top: 2rem;
+            padding: 2rem;
+            background: rgba(255,102,204,.05);
+            border-radius: 20px;
+            text-align: center;
+        }
+        #quote-text {
+            color: var(--primary-pink);
+            font-style: italic;
+            font-size: 1.1rem;
+        }
+
+        footer {
+            text-align: center;
+            padding: 3rem;
+            color: #555;
+            font-size: .8rem;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-  <h1>Robin Ace Tapang <span class="verified-badge"></span></h1>
-  <p>Motivated Bachelor of Industrial Technology Undergraduate Majoring in Computer Technology</p>
-  <div>
-    <a href="#projects" class="btn">View Projects</a>
-    <a href="#contact" class="btn">Contact Me</a>
-  </div>
+    <div class="profile-wrapper" data-aos="fade-down">
+        <img src="selfie.jpg" alt="Robin Ace Tapang" class="profile-photo">
+        <h1>Robin Ace Tapang <span class="verified-badge"></span></h1>
+    </div>
+    <p>Bachelor of Industrial Technology | Computer Technology Major</p>
 
-  <!-- Anime + Particle Effects -->
-  <div class="anime-container">
-    <div id="nezuko-animation"></div>
-    <div id="particles-js"></div>
-  </div>
+    <div class="anime-visual-area">
+        <div id="particles-js"></div>
+        <div id="nezuko-animation">🌸</div>
+    </div>
+
+    <a href="#projects" class="btn">View Projects</a>
+    <a href="#contact" class="btn">Get In Touch</a>
 </header>
 
 <nav>
-  <a href="#about">About</a>
-  <a href="#skills">Skills</a>
-  <a href="#projects">Projects</a>
-  <a href="#achievements">Achievements</a>
-  <a href="#certificates">Certificates</a>
-  <a href="#resume">Resume</a>
-  <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
 </nav>
 
 <section id="about" data-aos="fade-up">
-<h2>About Me</h2>
-<p>
-I am Robin Ace Tapang, a motivated third-year Bachelor of Industrial Technology undergraduate majoring in Computer Technology. I possess both software and hardware skills, including programming in C++, Python, and JavaScript, knowledge of databases (SQL), proficiency with Microsoft and Google applications, IDEs for software development, system troubleshooting, computer networking, and hardware maintenance. I am passionate about creating functional IT solutions while continually improving my technical and practical knowledge in software, hardware, and networking.
-</p>
+    <h2>About Me</h2>
+    <p>I am a motivated third-year student specializing in Computer Technology. I bridge the gap between hardware maintenance and software development.</p>
 </section>
 
 <section id="skills" data-aos="fade-up">
-<h2>Skills</h2>
-<div class="grid">
-<div class="card">HTML, CSS, JavaScript, C++, Python</div>
-<div class="card">Database Management (SQL)</div>
-<div class="card">Software Platforms & IDEs</div>
-<div class="card">Computer Hardware & Troubleshooting</div>
-<div class="card">Networking & System Maintenance</div>
-<div class="card">Microsoft & Google Applications</div>
-</div>
+    <h2>Technical Skills</h2>
+    <div class="grid">
+        <div class="card"><strong>Programming:</strong> C++, Python, JavaScript, SQL</div>
+        <div class="card"><strong>Hardware:</strong> Troubleshooting, Networking</div>
+        <div class="card"><strong>Web:</strong> HTML5, CSS3, Responsive Design</div>
+        <div class="card"><strong>Tools:</strong> MS Office, Google Workspace</div>
+    </div>
 </section>
 
 <section id="projects" data-aos="fade-up">
-<h2>Projects</h2>
-<div class="grid">
-<div class="card">
-<h3>Personal Portfolio Website</h3>
-<p>A professional and responsive web portfolio designed to showcase my skills and background.</p>
-</div>
-<div class="card">
-<h3>Academic Computer Technology Projects</h3>
-<p>Hands-on coursework projects related to system fundamentals, basic programming, and IT concepts.</p>
-</div>
-</div>
-</section>
-
-<section id="achievements" data-aos="fade-up">
-<h2>Achievements</h2>
-<div class="grid">
-<div class="card">
-<h3>G.A.B Guardian AuroBox QR Code Attendance System Thesis Project 2024</h3>
-</div>
-</div>
-</section>
-
-<section id="certificates" data-aos="fade-up">
-<h2>Certificates</h2>
-<div class="grid">
-<div class="card">
-<h3>Comptechniques: Augment Your Tech Knowledge in the Vital Environment of Technology 2023</h3>
-</div>
-<div class="card">
-<h3>TechXperts Workshop Sessions - Bulacan Tech Expo 2023</h3>
-</div>
-</div>
-</section>
-
-<section id="resume" data-aos="fade-up">
-<h2>Resume</h2>
-<p>You can download my complete CV below.</p>
-<a class="btn" href="Robin-Ace-Tapang-CV.pdf" download>Download CV</a>
+    <h2>Key Projects</h2>
+    <div class="grid">
+        <div class="card">
+            <h3>QR Attendance System</h3>
+            <p>G.A.B Guardian AuroBox – automated QR attendance system.</p>
+        </div>
+        <div class="card">
+            <h3>Digital Portfolio</h3>
+            <p>High-performance portfolio with advanced animations.</p>
+        </div>
+    </div>
 </section>
 
 <section id="contact" data-aos="fade-up">
-<h2>Contact</h2>
-<p>Email: <a href="mailto:msalobenyaa@gmail.com">msalobenyaa@gmail.com</a></p>
+    <h2>Contact</h2>
+    <p>📧 Email: yourname@email.com</p>
+    <p>📱 Phone (PH): <strong>+63 991 328 8572</strong></p>
+
+    <div id="quote-container">
+        <p id="quote-text"></p>
+    </div>
 </section>
 
 <footer>
-<p>© 2026 Robin Ace Tapang. All rights reserved.</p>
+    © 2026 Robin Ace Tapang — All Rights Reserved
 </footer>
 
-<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.1/lottie.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 <script>
-AOS.init({ duration: 1200 });
+AOS.init({ duration: 1000, once: true });
 
-// Lottie Nezuko animation (replace URL with your JSON or LottieFiles URL)
-lottie.loadAnimation({
-  container: document.getElementById('nezuko-animation'),
-  renderer: 'svg',
-  loop: true,
-  autoplay: true,
-  path: 'https://assets4.lottiefiles.com/packages/lf20_sY9qVx.json' // demo Nezuko animation from LottieFiles
-});
+const quotes = [
+    "Believe you can, and you're halfway there.",
+    "Dream big. Start small. Act now.",
+    "Success is built on consistency.",
 
-// tsParticles for Demon Slayer powers
-tsParticles.load("particles-js", {
-  particles: {
-    number: { value: 100 },
-    color: { value: ["#FF4500","#00BFFF","#32CD32","#FF69B4","#FFD700"] },
-    shape: { type: "circle" },
-    opacity: { value: 0.8 },
-    size: { value: { min: 2, max: 6 } },
-    move: { enable: true, speed: 3, direction: "none", out_mode: "out" },
-    line_linked: { enable: false }
-  },
-  interactivity: {
-    events: {
-      onhover: { enable: true, mode: "repulse" },
-      onclick: { enable: true, mode: "push" }
+    "Hindi mahalaga kung gaano kabagal, basta hindi ka humihinto.",
+    "Ang tagumpay ay bunga ng tiyaga.",
+    "Patuloy lang, may patutunguhan ka.",
+
+    "Başarı, vazgeçmeyenlerin ödülüdür.",
+    "Kendine inan, her şey mümkün.",
+    "Bugün zor, yarın efsane olacaksın."
+];
+
+document.getElementById("quote-text").textContent =
+    quotes[Math.floor(Math.random() * quotes.length)];
+
+particlesJS("particles-js", {
+    particles: {
+        number: { value: 120 },
+        size: { value: 3 },
+        move: { speed: 2 },
+        opacity: { value: 0.7 },
+        line_linked: { enable: false },
+        color: { value: ["#ff4500","#00bfff","#7fff00","#b84dff","#ffd700"] }
     },
-    modes: { repulse: { distance: 120 }, push: { particles_nb: 6 } }
-  }
+    interactivity: {
+        events: { onhover: { enable: true, mode: "repulse" } }
+    }
 });
+
+let angle = 0;
+setInterval(() => {
+    angle += 0.05;
+    document.getElementById("nezuko-animation").style.transform =
+        `translateY(${Math.sin(angle)*15}px)`;
+}, 30);
 </script>
+
 </body>
 </html>
